--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Ejemplo de sistema de registro de Juegos</title>
 </head>
 <body>
-    
+    <script src="app.js"> </script>
 </body>
 </html>
